tests/parser/fail/self-param-kw.som
"test:
failMessage:
  - contains: define
  - contains: self
"

SelfParamKw = (
  test: self makes: errors = ('yes')
)
